<resources>
    <string name="app_name">Memory Vault</string>
    <!-- Activity Names -->
    <string name="dispatch_activity_label">Memory Vault</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="action_add_memory">Add Memory</string>
    <string name="activity_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="activity_add_memory">New Memory</string>
    <string name="label_title">Title:</string>
    <string name="hint_memory_title">Title of new memory</string>
    <string name="label_date">Date:</string>
    <string name="date_placeholder">xx/xx/xxxx</string>
    <string name="label_guests">Guests:</string>
    <string name="hint_guest_count">Number of guests</string>
    <string name="label_notes">Notes:</string>
    <string name="hint_notes">Description of memory...</string>
    <string name="memory_item_title">Memory Title</string>
    <string name="memory_item_date">XX/XX/XXXX</string>
    <string name="memory_item_guests">Guest count</string>
    <string name="action_delete">Delete</string>
</resources>
