<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="2"
        android:title="@string/menu_sync"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/action_add_memory"
        app:showAsAction="always" />

</menu>